# donut_examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cla.yml
examples/aftermath/: CMakeLists.txt  aftermath.cpp  shaders.hlsl
examples/basic_triangle/: CMakeLists.txt  basic_triangle.cpp  shaders.hlsl
examples/bindless_rendering/: CMakeLists.txt  bindless_rendering.cpp  bindless_rendering.hlsl  shaders.cfg
examples/deferred_shading/: CMakeLists.txt  CubeGeometry.h  deferred_shading.cpp
examples/headless/: CMakeLists.txt  headless.cpp  shaders.cfg  shaders.hlsl
examples/meshlets/: CMakeLists.txt  meshlets.cpp  shaders.cfg  shaders.hlsl
examples/rt_bindless/: CMakeLists.txt  lighting_cb.h  rt_bindless.cpp  rt_bindless.hlsl  shaders.cfg
examples/rt_particles/: CMakeLists.txt  geometry.hlsli  mlab.hlsli  rt_particles.cpp  rt_particles.hlsl  rt_particles_cb.h  shaders.cfg  utils.hlsli
examples/rt_reflections/: CMakeLists.txt  lighting_cb.h  rt_reflections.cpp  rt_reflections.hlsl  shaders.cfg
examples/rt_shadows/: CMakeLists.txt  rt_shadows.cpp  rt_shadows.hlsl  shaders.cfg
examples/rt_triangle/: CMakeLists.txt  rt_triangle.cpp  rt_triangle.hlsl  shaders.cfg
examples/shader_specializations/: CMakeLists.txt  shader_specializations.cpp  shaders.cfg  shaders.hlsl
examples/threaded_rendering/: CMakeLists.txt  threaded_rendering.cpp
examples/variable_shading/: CMakeLists.txt  shaders.cfg  shaders.hlsl  variable_shading.cpp
examples/vertex_buffer/: CMakeLists.txt  shaders.hlsl  vertex_buffer.cpp
examples/work_graphs/: CMakeLists.txt  README.md  animation.hlsl  deferred_shading.hlsl  gbuffer_fill.hlsl  light_culling.hlsl  lighting.hlsli  materials.hlsli  scene.cpp  scene.h  scene_data.hlsli  shaders.cfg  ver_test.hlsl  work_graph_broadcasting.hlsl  work_graphs_d3d12.cpp
feature_demo/: CMakeLists.txt  FeatureDemo.cpp
media/: sponza-plus.scene.json
media/rt_particles/: ParticleScene.gltf  environment-map.dds
